Updated swagger and added cashflow endpoint
